manifests/app/23-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskapp-ingress
  namespace: taskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - taskapp.16.16.213.192.nip.io
    secretName: taskapp-tls   # cert-manager creates and fills this in automatically
  rules:
  - host: taskapp.16.16.213.192.nip.io
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: taskapp-backend-svc
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
